# canadalogin-partner-portal

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  release-please-config.json
backend/: .env.dockercompose  .env.sample  .gitignore  CHANGELOG.md  DNR_READ.md  Dockerfile  MAU_SETTINGS.md  README.md  default.conf  docker-compose.yml  pyproject.toml  setup.py
backend/docs/getting-started/: configuration.md  first-run.md  index.md  installation.md
backend/docs/user-guide/: development.md  project-structure.md  testing.md
backend/docs/user-guide/api/: endpoints.md
backend/docs/user-guide/authentication/: index.md  jwt-tokens.md  user-management.md
backend/docs/user-guide/configuration/: environment-specific.md  environment-variables.md  index.md  settings-classes.md
backend/docs/user-guide/database/: crud.md  index.md  migrations.md
backend/scripts/: upload_sample_mau.sh
backend/scripts/gunicorn_managing_uvicorn_workers/: .env.example  Dockerfile
backend/scripts/local_with_uvicorn/: .env.example
backend/scripts/local_without_docker/: env.sample
backend/scripts/production_with_nginx/: .env.example  Dockerfile
backend/src/app/: main.py
backend/src/app/api/: dependencies.py
backend/src/app/core/: access_control.py  config.py  department_seed.py  health.py  logger.py  oidc.py  schemas.py  security.py  setup.py
backend/src/app/middleware/: logger_middleware.py
backend/src/app/models/: __init__.py  access_policy.py  application_contact.py  audit_log.py  department.py  rp_application.py  rp_application_developer_invitation.py  user.py  workspace_member.py
backend/src/app/repositories/: __init__.py  crud_access_policies.py  crud_application_contacts.py  crud_audit_log.py  crud_departments.py  crud_roles.py  crud_rp_application_developer_invitations.py  crud_rp_applications.py  crud_workspace_members.py  crud_workspaces.py  dependencies.py  ibm_sv_admin.py  ibm_sv_user.py  s3_repository.py
backend/src/app/schemas/: access_policy.py  audit_log.py  (+10 more)
backend/src/migrations/: README.md  env.py
backend/src/scripts/: backfill_enable_users.py  create_first_superuser.py  seed_access_policies.py
backend/tests/: conftest.py  test_access_control_integration.py  test_application_info_api.py  test_application_info_service.py  test_audit_log.py  test_auth_dependencies.py  test_auth_endpoints.py  test_auth_service.py  test_casbin_access.py  test_department.py  test_department_seed.py  test_department_service.py  test_exception_handlers.py  test_health_service.py  test_ibm_sv_admin.py  test_ibm_sv_admin_client.py  test_ibm_sv_admin_service.py  test_ibm_sv_repository_dependencies.py  test_ibm_sv_user_client.py  test_ibm_sv_user_service.py  test_main.py  test_oidc_auth.py  test_oidc_service.py  test_openapi_error_responses.py  test_password_deprecation.py  test_policy.py  test_policy_service.py  test_rate_limit.py  test_repository_imports.py  test_role.py  test_rp_application_department_setup.py  test_rp_application_mau_report.py  test_rp_application_oauth_setup.py  test_rp_application_sync.py  test_s3_repository.py  test_security_auth_models.py  test_session_setup.py  test_standardized_logger.py  test_superuser_seed_migration.py  test_task.py  (+4 more)
backend/tests/helpers/: generators.py
(+539 files in other folders)
