[project]
name = "canadalogin-partner-portal"
version = "0.1.0"
description = "CanadaLogin Partner Portal - FastAPI backend"
authors = [{ name = "CDS Auth Team" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11, <4"
dependencies = [
    "Authlib>=1.6.12",
    "python-dotenv>=1.2.2",
    "itsdangerous>=2.2.0",
    "pydantic[email]>=2.12.5",
    "fastapi>=0.135.0",
    "casbin-fastapi-decorator[db]>=0.2.3",
    "uvicorn>=0.42.0",
    "uvloop>=0.22.0",
    "httptools>=0.7.1",
    "uuid>=1.30",
    "uuid6>=2024.1.12",
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "SQLAlchemy-Utils>=0.41.1",
    "pyasn1>=0.6.3",
    "PyJWT>=2.12.0",
    "SQLAlchemy>=2.0.48",
    "python-multipart>=0.0.27",
    "greenlet>=2.0.2",
    "httpx>=0.26.0",
    "pydantic-settings>=2.13.0",
    "redis[hiredis]>=4.2.0,<6",
    "arq>=0.27.0",
    "bcrypt>=4.1.1",
    "psycopg2-binary>=2.9.9",
    "fastcrud>=0.21.0",
    "gunicorn>=25.0.0",
    "ruff>=0.11.13",
    "mypy>=1.16.0",
    "structlog>=25.1.0,<=25.5.0",
    "rich>=14.3.0",
    "starsessions[redis]>=2.2.1",
    "ibm-verify-community-sdk==0.3.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.14.0",
    "faker>=26.0.0",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
include = ["src/"]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 150
fix = true
exclude = ["src/scripts", "src/migrations"]

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F", # Pyflakes
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E", # pycodestyle
    "W", # Warning
    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "C", # Complexity (mccabe+) & comprehensions
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP", # pyupgrade
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I", # isort
]
ignore = [
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E402", # module level import not at top of file
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP006", # use-pep585-annotation
    "UP007", # use-pep604-annotation
    "E741",  # Ambiguous variable name
    # "UP035", # deprecated-assertion
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # unused import
    "F403", # star imports
]

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
    filterwarnings = [
        "ignore::PendingDeprecationWarning:starlette.formparsers",
    ]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest-asyncio>=1.0.0",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "src.app.*"
disallow_untyped_defs = true
